# env2json.py

./: README.md  setup.cfg  setup.py
env2json/: __init__.py  __main__.py
tests/env2json/examples/: .env  env2json.sh
