# https://pypi.org/project/setupcfg-generator/
[metadata]
name = env2json
version = 2019.4.13
url = https://github.com/looking-for-a-job/env2json.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = env json

[options]
install_requires = 
	click
	setuptools
packages = 
	env2json
